# cataloga

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PRODUCT.md  README.md  docker-compose.yml  mise.toml  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: cataloga-demo-production.yml  cataloga-v2-php.yml  ci.yml  deploy-cloudflare.yml  sync-cloudflare-template.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/mcp/: README.md
apps/php/: composer.json
apps/php/public/: index.php
apps/php/public/assets/: app.css  app.js
apps/php/src/Audit/: AuditLogger.php
apps/php/src/Git/: GitService.php
apps/php/src/Http/: ApiController.php  Request.php  Response.php  Router.php  WebController.php
apps/php/src/Mutation/: ChangeService.php  ChangeSessionRepository.php
apps/php/src/Registry/: DomainPackRepository.php  EntityRepository.php  PathGuard.php  RecordParser.php  RecordSerializer.php  RegistryFileRepository.php  RegistrySettingsRepository.php  RelationRepository.php  ResourceDependencyProjector.php  SchemaRepository.php
apps/php/src/Validation/: RegistryValidator.php
apps/php/src/View/: ResourceFormViewModel.php  TemplateRenderer.php  helpers.php
apps/php/templates/: dashboard.php  layout.php
apps/php/templates/changes/: detail.php  list.php
apps/php/templates/domain-packs/: list.php
apps/php/templates/entities/: dependency-slot-form.php  detail.php  form.php  list.php
apps/php/templates/git/: diff.php
apps/php/templates/graph/: index.php
apps/php/templates/relations/: form.php  list.php
apps/php/templates/settings/: form.php
apps/php/templates/validation/: index.php
apps/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/web/src/: global.d.ts  homeLabTemplate.ts  i18n.tsx  main.tsx  preline-compat.d.ts  preline.ts  resourcePayload.test.ts  resourcePayload.ts  resourceTypeDeletion.test.ts  resourceTypeDeletion.ts  resourceTypeEditorState.test.ts  resourceTypeEditorState.ts  styles.css  types.ts
apps/web/src/api/: client.test.ts  client.ts
apps/web/src/components/: Action.tsx  AppShell.tsx  Badge.tsx  Breadcrumbs.tsx  Button.tsx  DataCard.tsx  DataTable.tsx  EmptyState.tsx  ErrorBanner.tsx  FieldInput.tsx  GraphControls.tsx  GraphDetailsPanel.tsx  Layout.tsx  (+15 more)
apps/worker/src/: index.ts
crates/cataloga-api/: Cargo.toml
crates/cataloga-api/src/: lib.rs
crates/cataloga-cli/: Cargo.toml
crates/cataloga-cli/src/: main.rs
crates/cataloga-core/: Cargo.toml
crates/cataloga-core/src/: lib.rs
crates/cataloga-server/: Cargo.toml
crates/cataloga-server/src/: lib.rs
crates/cataloga-store/: Cargo.toml
crates/cataloga-store-d1/: Cargo.toml
crates/cataloga-store-d1/src/: lib.rs
crates/cataloga-store-sqlite/: Cargo.toml
crates/cataloga-store-sqlite/src/: lib.rs
crates/cataloga-store/src/: lib.rs
crates/cataloga-worker/: Cargo.toml  wrangler.toml
crates/cataloga-worker/src/: lib.rs
deploy/cloudflare/: README.md  metadata-schema.md
deploy/cloudflare-template/: README.md  package.json  wrangler.toml
deploy/cloudflare-template/scripts/: verify-template.mjs
deploy/docker/: README.md
docker/php/: Dockerfile
docs/: api-reference.md  api.md  architecture-v2.md  architecture.md  change-workflow.md  cli-examples.md  cloudflare-deployment.md  data-repository-structure.md  deployment-reproducible.md  future-ai-integration.md  future-enterprise.md  managed-hosting-architecture.md  managed-hosting-operational-model.md  managed-hosting-operations.md  managed-hosting-roadmap.md  migration-to-v2.md  product.md  read-only-and-delivery-model.md  self-host-guide.md  self-host-quickstart.md  type-packs.md  ui-terminology-ja.md  ui-ux.md
docs/deploy/: cloudflare-button.md  cloudflare.md  observability.md
domain-packs/: README.md
domain-packs/cloud/: pack.yaml
domain-packs/dns/: pack.yaml
domain-packs/example/: pack.yaml
domain-packs/example/schemas/: example.application.yaml
domain-packs/inventory/: pack.yaml
domain-packs/network/: pack.yaml
domain-packs/service-catalog/: pack.yaml
domain-packs/service-catalog/schemas/: database.resource.yaml  host.resource.yaml  runs_on.relation.yaml  service.resource.yaml  uses.relation.yaml
examples/: catalog.yaml
examples/home-lab/registry/: export.yaml
examples/registry/: README.md
examples/registry-v2/: README.md
migrations/sqlite/: 0001_init.sql
registry/: settings.yaml  type-packs.lock.yaml
registry/entities/: entity-example-entity.yaml
registry/relations/: relation-example-entity-self-reference.yaml
registry/resources/database/: database-aa.yaml  database-test.yaml
registry/resources/example.type/: example-entity.yaml
registry/schemas/: relation.depends_on.yaml
schemas/: cataloga.v1.schema.json
scripts/: smoke-local.sh  smoke-worker.sh
tests/: integration.test.mjs  registry-v2-primitives.test.mjs
(+30 files in other folders)
