[workspace]
members = [
  "crates/cataloga-core",
  "crates/cataloga-store",
  "crates/cataloga-store-sqlite",
  "crates/cataloga-store-d1",
  "crates/cataloga-api",
  "crates/cataloga-server",
  "crates/cataloga-worker",
  "crates/cataloga-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
ipnet = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "json"] }
worker = "0.6"
