[workspace]
members = [
  "crates/cataloga-core",
  "crates/cataloga-store",
  "crates/cataloga-store-sqlite",
  "crates/cataloga-store-d1",
  "crates/cataloga-api",
  "crates/cataloga-server",
  "crates/cataloga-worker",
  "crates/cataloga-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json"] }
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
url = "2.5.8"
ipnet = "2.12.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "json"] }
worker = "0.8.1"
