[package]
name = "cataloga-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cataloga-core = { path = "../cataloga-core" }
cataloga-store = { path = "../cataloga-store" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
