[package]
name = "cataloga-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
cataloga-api = { path = "../cataloga-api" }
cataloga-core = { path = "../cataloga-core" }
cataloga-store-sqlite = { path = "../cataloga-store-sqlite" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
