[package]
name = "cataloga-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
cataloga-api = { path = "../cataloga-api" }
cataloga-core = { path = "../cataloga-core" }
cataloga-store-d1 = { path = "../cataloga-store-d1" }
serde.workspace = true
serde_json.workspace = true
worker = { workspace = true, features = ["d1"] }
